[package]
name = "websocket_server_sample_api_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-test = "14.2.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
